--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -4,17 +4,17 @@
         <img src="/assets/build1.jpg" alt="Logo" height="130" width="150" style="margin-top:20px;">
     </div>
     <div class="col-sm-7" style="border-top:1px solid black">
-      <p style="display: inline-block">
-      <span style="font-family: BahamasFamily;font-weight: bold; font-size: 60px;text-decoration: underline">SHREENATHJI</span>
-      <span style="font-family: BankGothicFamily; font-size: 28px;text-decoration: underline;display: inline-block;transform: scaleY(1.5)">CEMENT INDUSTRIES</span><br>
+      <div style="display: inline-block">
+      <span style="font-family: BahamasFamily;font-weight: bold; font-size: 60px;">SHREENATHJI</span><hr style="border: 1px solid;width:66%;margin:0px !important">
+      <span style="font-family: BankGothicFamily; font-size: 28px;display: inline-block;transform: scaleY(1.5)">CEMENT INDUSTRIES</span><hr style="border: 1px solid;width:66%;margin:0px !important">
       <span style="font-size:20px"> Survey No. 44, Plot No. 6,7,8, HADAMTALA</span><br>
-      <span style="font-size:20px">Ta. Kotdasangani, Dist. : Rajkot (Gujarat), Mo. 99989 45722</span></p>
+      <span style="font-size:20px">Ta. Kotdasangani, Dist. : Rajkot (Gujarat), Mo. 99989 45722</span></div>
       <br>
     </div>
     <div class="col-sm-3 border" style="border-bottom:none !important;padding:0px;">
       <br>
-      <span style="font-family: RobotoFamily;font-size:25px;margin-left:30px;padding-left:15px">{{this.invoice}} INVOICE</span><br><br>
-      <div class="border" style="padding-left:15px;border-right: none !important;border-left: none !important;font-weight:bold;font-size:19px;margin-bottom:15px;">
+      <span style="font-family: RobotoFamily;font-size:25px;padding-left:15px">{{this.invoice}} INVOICE</span><br><br>
+      <div class="border" style="padding-left:15px;border-right: none !important;border-left: none !important;font-weight:bold;font-size:16px;margin-bottom:15px;">
           CASH MEMO / DEBIT MEMO
       </div>
       <pre>   State           : Gujarat</pre><br>
