main page alignment

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,4 +1,4 @@
 <div class="centerAlign">
-  <input type="button" [routerLink]="['/wellsand']" class="btn btn-warning" value="WELLSAND" />
-  <input type="button" [routerLink]="['/shreenathji']" style="margin-left:10px" class="btn btn-warning" value="SHREENATHJI" />
+  <input type="button" [routerLink]="['/wellsand']" class="btn btn-warning" value="WELLSAND" /><br><br>
+  <input type="button" [routerLink]="['/shreenathji']" class="btn btn-warning" value="SHREENATHJI" />
 </div>
