--- a/src/app/preview-wellsand/preview-wellsand.component.html
+++ b/src/app/preview-wellsand/preview-wellsand.component.html
@@ -1,20 +1,20 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-2 border" style="border-bottom:none !important;border-right:none !important">
-        <img src="/assets/build1.jpg" alt="Logo" height="130" width="150" style="margin-top:20px;">
+        <img src="/assets/wellsand.png" alt="Logo" height="130" width="150" style="margin-top:20px;">
     </div>
     <div class="col-sm-7" style="border-top:1px solid black">
       <div style="display: inline-block">
-      <span style="font-family: BahamasFamily;font-weight: bold; font-size: 60px; text-decoration: underline;">WELLSAND PRODUCTS</span><br>
-      <!-- <span style="font-family: BankGothicFamily; font-size: 28px;display: inline-block;transform: scaleY(1.5)">PRODUCTS</span><hr style="border: 1px solid;width:66%;margin:0px !important"> -->
-      <span style="font-family: cursive; font-style: italic;font-weight: bold;">Mfg.: All kind of foundry moulding coated sands</span><br>
+      <span style="font-family: BahamasFamily;font-weight: bold; font-size: 50px; text-decoration: underline;">WELLSAND PRODUCTS</span><br>
+      <span style="font-size:17px;font-weight: bold;">Mfg.: All kind of foundry moulding coated sands & cement</span><br>
       <span style="font-size:20px"> N. H. 8 - B, Bhunava Chokdi, HADAMTALA</span><br>
-      <span style="font-size:20px">Ta. Kotdasangani, Dist. : Rajkot (Gujarat), Mo. 98985 53524</span></div>
+      <span style="font-size:20px">Ta. Kotdasangani, Dist. : Rajkot (Gujarat), Mo. 98985 53524</span></div><br>
+      <span style="font-size:17px;font-weight: bold;">Composition taxable person not eligible to collect tax on supplier</span>
       <br>
     </div>
     <div class="col-sm-3 border" style="border-bottom:none !important;padding:0px;">
       <br>
-      <span style="font-family: RobotoFamily;font-size:25px;padding-left:15px">{{this.invoice}} INVOICE</span><br><br>
+      <span style="font-family: RobotoFamily;font-size:25px;padding-left:15px">BILL OF SUPPLY</span><br><br>
       <div class="border" style="padding-left:15px;border-right: none !important;border-left: none !important;font-weight:bold;font-size:16px;margin-bottom:15px;">
           CASH MEMO / DEBIT MEMO
       </div>
@@ -35,7 +35,6 @@
     <div class="col-sm-3 border" style="font-weight:bold;">
       <br>
       <span style="font-size:25px;">INVOICE No. : {{this.invoiceNo}}</span>
-      
     </div>
   </div>
 
@@ -75,7 +74,6 @@
       </tr>
       <tr>
         <td colspan="5" style="font-weight:bold">
-          <!-- <span>This Product is manufactured by mini cement plant</span><br> -->
           <span>UL Paid by : Customer arrange</span><br>
           <span>Rate is as per X Factory</span>
         </td>
@@ -83,22 +81,17 @@
         <td class="amtProp">{{this.totAmount | number : '1.2'}}</td>
       </tr>
       <tr>
-          <td colspan="5"><span>Dispatch Through  :  {{this.dispatch}}</span><span style="float:right;margin-right:5px">Freight : {{this.freight}}</span></td>
-          <td>SGST@ {{this.halfgst | number : '1.2'}} %</td>
-          <td class="amtProp">{{this.halfgstAmt | number : '1.2'}}</td>
-        </tr>
+        <td colspan="5"><span>Dispatch Through  :  {{this.dispatch}}</span><span style="float:right;margin-right:5px">Freight : {{this.freight}}</span></td>
+        <td>DISCOUNT</td>
+        <td class="amtProp">{{this.discount | number : '1.2'}}</td>
+      </tr>
       <tr>
         <td colspan="5"><span>Vehicle No.  :   {{this.vehicleNo}}</span><span style="float:right;margin-right:5px">Driver Mobile No.  :  {{this.mobile}}</span></td>
-        <td>CGST@ {{this.halfgst | number : '1.2'}} %</td>
-        <td class="amtProp">{{this.halfgstAmt | number : '1.2'}}</td>
+        <td>OTHER CHARGE</td>
+        <td class="amtProp">{{this.otherCharge | number : '1.2'}}</td>
       </tr>
-      <!-- <tr>
-          <td colspan="5"><span style="font-weight:bold">IGST Amount in Words: </span> <span class="italic" style="margin-left:10px">{{this.totigstWord | titlecase}}</span></td>
-          <td>IGST@ {{this.igst | number : '1.2'}} %</td>
-          <td class="amtProp">{{this.igstAmt | number : '1.2'}}</td>
-        </tr> -->
       <tr>
-        <td colspan="5"><span style="font-weight:bold">GST Amount in Words: </span> <span class="italic" style="margin-left:10px">{{this.totgstWord | titlecase}}</span></td>
+        <td colspan="5"></td>
         <td>Round off</td>
         <td class="amtProp">{{this.roundOff | number : '1.2'}}</td>
       </tr>    
@@ -116,7 +109,7 @@
       <span>We hereby declare that our registration certificate number are as under</span><br>
       <pre>GSTIN No.      : 24AAAFW7165J1ZX</pre><br>
       <pre>Bank Name    : KOTAK MAHINDRA</pre><br>
-      <pre>Bank A/c No.  : 1612088837</pre><br>
+      <pre>Bank A/c No.  : 1612010210</pre><br>
       <pre>IFSC Code      : KKBK0002788</pre><br><br>
     </div>
     <div class="col-sm-3 border text-center" style="border-bottom:none !important;border-top:none !important">
