--- a/src/app/wellsand/wellsand.component.html
+++ b/src/app/wellsand/wellsand.component.html
@@ -10,7 +10,7 @@
       <div class="col-sm-2">
         <label for="invoiceNo">Invoice No. :</label>
       </div>
-      <div class="col-sm-2">
+      <div class="col-sm-3">
         <input type="text" class="form-control" formControlName="invoiceNo" />
       </div>
       <div class="col-sm-1 offset-sm-3">
@@ -18,18 +18,6 @@
       </div>
       <div class="col-sm-2">
         <input type="text" class="form-control" formControlName="todayDate" />
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-2">
-        <label for="invoice">Invoice:</label>
-      </div>
-      <div class="col-sm-3">
-        <input type="radio" id="tax" name="invoice" formControlName="invoice" value="TAX">
-        <label for="tax">TAX</label>&nbsp;&nbsp;
-        <input type="radio" id="retail" name="invoice" formControlName="invoice" value="RETAIL">
-        <label for="retail">RETAIL</label>
       </div>
     </div>
 
@@ -125,21 +113,21 @@
 
     <div class="row">
       <div class="col-sm-2">
-        <label for="gst">GST %</label>
+        <label for="discount">Discount</label>
       </div>
       <div class="col-sm-3">
-        <input type="number" class="form-control" formControlName="gst" />
+        <input type="number" class="form-control" formControlName="discount" />
       </div>
     </div>
 
-    <!-- <div class="row">
+    <div class="row">
       <div class="col-sm-2">
-        <label for="igst">IGST %</label>
+        <label for="otherCharge">Other Charge</label>
       </div>
       <div class="col-sm-3">
-        <input type="number" class="form-control" formControlName="igst" />
+        <input type="number" class="form-control" formControlName="otherCharge" />
       </div>
-    </div> -->
+    </div>
 
     <div class="row">
       <div class="col-sm-2">
