--- a/src/app/preview-wellsand/preview-wellsand.component.html
+++ b/src/app/preview-wellsand/preview-wellsand.component.html
@@ -7,10 +7,9 @@
       <div style="display: inline-block">
       <span style="font-family: BahamasFamily;font-weight: bold; font-size: 50px; text-decoration: underline;">WELLSAND PRODUCTS</span><br>
       <span style="font-size:17px;font-weight: bold;">Mfg.: All kind of foundry moulding coated sands & cement</span><br>
+      <span style="font-size:17px;font-weight: bold;">Composition taxable person not eligible to collect tax on supplier</span><br>
       <span style="font-size:20px"> N. H. 8 - B, Bhunava Chokdi, HADAMTALA</span><br>
       <span style="font-size:20px">Ta. Kotdasangani, Dist. : Rajkot (Gujarat), Mo. 98985 53524</span></div><br>
-      <span style="font-size:17px;font-weight: bold;">Composition taxable person not eligible to collect tax on supplier</span>
-      <br>
     </div>
     <div class="col-sm-3 border" style="border-bottom:none !important;padding:0px;">
       <br>
