--- a/src/app/preview-wellsand/preview-wellsand.component.html
+++ b/src/app/preview-wellsand/preview-wellsand.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-2 border" style="border-bottom:none !important;border-right:none !important">
-        <img src="/assets/wellsand.png" alt="Logo" height="130" width="150" style="margin-top:20px;">
+        <img src="/assets/wellsand.png" alt="Logo" height="130" width="150" style="margin-top:30px;">
     </div>
     <div class="col-sm-7" style="border-top:1px solid black">
       <div style="display: inline-block">
+      <span style="font-size:15px;">COMPOSITION TAXABLE PERSON NOT ELIGIBLE TO COLLECT TAX ON SUPPLIES</span><br>
       <span style="font-family: BahamasFamily;font-weight: bold; font-size: 50px; text-decoration: underline;">WELLSAND PRODUCTS</span><br>
       <span style="font-size:17px;font-weight: bold;">Mfg.: All kind of foundry moulding coated sands & cement</span><br>
-      <span style="font-size:17px;font-weight: bold;">Composition taxable person not eligible to collect tax on supplier</span><br>
       <span style="font-size:20px"> N. H. 8 - B, Bhunava Chokdi, HADAMTALA</span><br>
       <span style="font-size:20px">Ta. Kotdasangani, Dist. : Rajkot (Gujarat), Mo. 98985 53524</span></div><br>
     </div>
