--- a/src/app/preview-wellsand/preview-wellsand.component.html
+++ b/src/app/preview-wellsand/preview-wellsand.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-2 border" style="border-bottom:none !important;border-right:none !important">
-        <img src="/assets/wellsand.png" alt="Logo" height="130" width="150" style="margin-top:30px;">
+        <img src="assets/wellsand.png" alt="Logo" height="130" width="150" style="margin-top:30px;">
     </div>
     <div class="col-sm-7" style="border-top:1px solid black">
       <div style="display: inline-block">
