sm to md wellsand

--- a/src/app/preview-wellsand/preview-wellsand.component.html
+++ b/src/app/preview-wellsand/preview-wellsand.component.html
@@ -41,7 +41,7 @@
     <div class="col-sm-6" style="border-left:1px solid black">
       <br><span style="font-weight:bold">Customer GSTIN: </span><span>{{this.custGST}}</span>
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <pre>City : {{this.custCity}}</pre><br>
       <pre>State : {{this.custState}}</pre><br>
       <pre>State Code : {{this.custStateCode}}</pre>
